--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vitalets/google-translate-api": "^9.2.1",
+    "fs-extra": "^11.3.0",
     "i18next": "^25.2.0",
     "i18next-browser-languagedetector": "^8.1.0",
     "lucide-react": "^0.344.0",
